# mcp-servers-rust

./: .gitignore  README.md
atlassian/: Cargo.toml  README.md
atlassian/config/: config.sample.json
atlassian/src/: atlassian.rs  config.rs  main.rs  mcp_types.rs
github/: Cargo.toml  README.md
github/src/: lib.rs  main.rs  mcp_core.rs
github/src/github/: client.rs  mod.rs  simple_client.rs  simple_types.rs  types.rs
github/src/resources/: mod.rs
github/src/server/: mod.rs
github/src/tools/: context.rs  dynamic.rs  issues.rs  mod.rs  pull_requests.rs  registry.rs  repos.rs  toolsets.rs  users.rs
gmail/: .env.example  Cargo.toml  README.md
gmail/src/: auth.rs  client.rs  error.rs  label_manager.rs  lib.rs  main.rs  mcp_types.rs  server.rs  tools.rs  utils.rs
notion/: Cargo.toml  README.md
notion/scripts/: notion-openapi.json
notion/src/: init_server.rs  lib.rs  main.rs
notion/src/mcp/: mod.rs  protocol.rs  server.rs  stdio.rs  transport.rs
notion/src/openapi_mcp_server/: mod.rs
notion/src/openapi_mcp_server/auth/: mod.rs  template.rs  types.rs
notion/src/openapi_mcp_server/client/: http_client.rs  mod.rs
notion/src/openapi_mcp_server/mcp_proxy/: mod.rs  proxy.rs
notion/src/openapi_mcp_server/openapi/: file_upload.rs  mod.rs  parser.rs
notion/tests/: integration_test.rs
perplexity/: Cargo.toml  README.md
perplexity/src/: main.rs
telegram/: Cargo.toml  README.md
telegram/src/: cli.rs  config.rs  error.rs  main.rs  server.rs  telegram.rs  types.rs  utils.rs
