[package]
name = "atlassian-mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP server for Atlassian JIRA and Confluence integration"
authors = ["Rust port of ATLASSIAN-MCP by Koundinya Kompalli"]
license = "MIT"
repository = "https://github.com/anthropics/mcp-servers-rust"
homepage = "https://github.com/anthropics/mcp-servers-rust/tree/main/atlassian"
keywords = ["mcp", "atlassian", "jira", "confluence"]
categories = ["api-bindings", "web-programming"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
rmcp = { version = "0.1", features = ["server", "transport-io"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"