[package]
name = "gmail-mcp-server"
version = "0.1.0"
edition = "2021"
description = "Gmail MCP server in Rust"
authors = ["Claude Code"]
license = "MIT"

[[bin]]
name = "gmail-mcp"
path = "src/main.rs"

[dependencies]
# MCP dependencies - using simpler approach with JSON-RPC
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
oauth2 = { version = "4.4", features = ["reqwest"] }
url = "2.5"
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.22"
regex = "1.10"
uuid = { version = "1.10", features = ["v4"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1"
open = "5.0"