[package]
name = "notion-mcp-server"
version = "1.8.1"
edition = "2021"
license = "MIT"
description = "Official MCP server for Notion API - Rust implementation"
repository = "https://github.com/makenotion/notion-mcp-server"
keywords = ["notion", "api", "mcp", "server"]

[[bin]]
name = "notion-mcp-server"
path = "src/main.rs"

[dependencies]
# HTTP client and serialization
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# OpenAPI handling
openapiv3 = "2.0"
jsonschema = "0.18"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File handling
mime_guess = "2.0"

# Environment variables
dotenvy = "0.15"

# HTTP headers
http = "1.0"

# Form data handling for multipart uploads
uuid = { version = "1.0", features = ["v4"] }

# URL encoding
urlencoding = "2.1"

# Base64 encoding for auth
base64 = "0.22"

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.4"
tempfile = "3.0"

[features]
default = []