[package]
name = "mcp-perplexity-ask"
version = "0.1.0"
edition = "2021"
description = "MCP server for Perplexity API integration written in Rust"
license = "MIT"
keywords = ["ai", "perplexity", "mcp", "modelcontextprotocol"]
homepage = "https://modelcontextprotocol.io"
repository = "https://github.com/modelcontextprotocol/servers"

[[bin]]
name = "mcp-perplexity-ask"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }