[package]
name = "mcp-telegram"
version = "0.1.0"
edition = "2021"
description = "MCP Server for Telegram"
license = "MIT"
authors = ["Claude <noreply@anthropic.com>"]

[[bin]]
name = "mcp-telegram"
path = "src/main.rs"

[dependencies]
# MCP and core functionality  
rust-mcp-sdk = "0.3.3"
rust-mcp-schema = "0.5.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
async-trait = "0.1"

# Telegram client
grammers-client = "0.7"
grammers-session = "0.7"
grammers-tl-types = "0.7"

# Configuration and environment
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regular expressions
regex = "1.0"

[dev-dependencies]
tempfile = "3.0"